[package]
name = "staking"
version = "1.1.0"
authors = ["WhoSoup <who.soup@gmail.com>"]
edition = "2018"

[dependencies]
solana-program = "1.8.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
borsh = "0.9.1"

[features]
test-bpf = []
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
solana-validator = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]
